fix(accordion): Adjust list spacing

--- a/local_packages/corporate/Resources/Public/src/scss/variables/_accordion.scss
+++ b/local_packages/corporate/Resources/Public/src/scss/variables/_accordion.scss
@@ -2,3 +2,7 @@ $accordion-padding-y: 0.5rem;
 $accordion-padding-x: 0rem;
 $accordion-body-padding-y: 1.5rem;
 $accordion-body-padding-x: 0.75rem;
+
+.accordion-body li {
+  padding-left: 0;
+}
